--- a/AllocationsTest/AllocationsTest/Base.lproj/Main.storyboard
+++ b/AllocationsTest/AllocationsTest/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -22,7 +22,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Q4-kd-dtA">
-                                <rect key="frame" x="157.5" y="318.5" width="60" height="30"/>
+                                <rect key="frame" x="87.5" y="294" width="200" height="78"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="55"/>
                                 <state key="normal" title="To Detail"/>
                                 <connections>
                                     <segue destination="l6Q-TT-Ch5" kind="presentation" identifier="" id="iS4-Ny-EEQ"/>
@@ -31,8 +32,8 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="9Q4-kd-dtA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="m3X-4Q-mxi"/>
-                            <constraint firstItem="9Q4-kd-dtA" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="x1A-Jf-uPI"/>
+                            <constraint firstItem="9Q4-kd-dtA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="LlZ-HT-Zkq"/>
+                            <constraint firstItem="9Q4-kd-dtA" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="UaJ-cL-Fe1"/>
                         </constraints>
                     </view>
                     <connections>
@@ -41,7 +42,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="319" y="433"/>
+            <point key="canvasLocation" x="317.60000000000002" y="432.23388305847078"/>
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="pbu-Gv-LOJ">
@@ -56,7 +57,8 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZFT-G7-0rh">
-                                <rect key="frame" x="153.5" y="318.5" width="68" height="30"/>
+                                <rect key="frame" x="74" y="294.5" width="227" height="78"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="55"/>
                                 <state key="normal" title="To Master"/>
                                 <connections>
                                     <action selector="buttonTapped" destination="l6Q-TT-Ch5" eventType="touchUpInside" id="chO-Ot-0NT"/>
